Removed world height checks from ReplaceBlocks and Resources; BO2/BO3/BO4, Surfaces and CHC remain